--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,16 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 project(JITtest)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_C_STANDARD 11)
+SET(GCC_COVERAGE_COMPILE_FLAGS "-g -O0 -ftest-coverage -fprofile-arcs")
 
 set(
   CMAKE_CXX_FLAGS
-  "${CMAKE_CXX_FLAGS} -marm"
-)
-
-set(
-  CMAKE_C_FLAGS
-  "${CMAKE_CXX_FLAGS} -marm"
+  "${CMAKE_CXX_FLAGS} -marm ${GCC_COVERAGE_COMPILE_FLAGS}"
 )
 
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/googletest)
